--- a/styles/standard.css
+++ b/styles/standard.css
@@ -21,3 +21,35 @@ body {
     height: 100%;
     position: relative;
 }
+
+#SCP914 {
+    left: calc(50% - 10vw);
+    position: absolute;
+    background-color: red;
+    margin-top: 20pc;
+    width: 20vw;
+    height: 20vw;
+}
+#machine-panel {
+    position: absolute;   
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+#panel-change {
+    display: block;
+    margin: auto;
+    margin-top: 32%;
+    height: 20%;
+    transition: transform 1s;
+    transform: rotate(-94deg);
+}
+#panel-button {
+    position: relative;
+    display: block;
+    margin: auto;
+    margin-top: 20%;
+    height: 20%;
+    z-index: 2;
+}
